# integral-quantifier

./: LICENSE  README.md  pyproject.toml
src/quantifiers/: __init__.py  __main__.py  base_class.py  testers.py
