[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantifiers"
version = "0.0.1"
authors = [
  { name="Ismael Harun", email="ismaelharunid@gmail.com" },
]
description = "An integral quantifier for inclusive testing and limiting quantities."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ismaelharunid/integral-quantifier"
Issues = "https://github.com/ismaelharunid/integral-quantifier/issues"
